--- a/README
+++ b/README
@@ -5,4 +5,7 @@ botId1 nameOfRobotToTrack  (e.g. botId1 srv12)
 botId2 nameOfRobotToTrack  (e.g. botId2 srv14) // You don't need to specify this if you have only 1 robot.
 botId3 nameOfRobotToTrack  (e.g. botId3 BlackFin1) // You don't need to specify this if you have only 2 robots.
 
-The name of the robot must match the name given in the Robot Controller. A common mistake (I do it a lot!) is to name the robot in the Robot Controller as srv12 and put in the camera svr12. If the name doesn't match the camera would not care about tracking that robot. 
+The name of the robot must match the name given in the Robot Controller. A common mistake (I do it a lot!) is to name the robot in the Robot Controller as srv12 and put in the camera svr12. If the name doesn't match the camera would not care about tracking that robot.
+
+How to calibrate the reference points:
+ 
